--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -18,8 +18,10 @@
             اضافة
           </a>
           <div class="upload-btn-wrapper p-2">
-            <!-- <button class="white-custom-btn">رفع ملف ايكسل <i class="far fa-file-excel"></i></button> -->رفع ملف ايكسل
-            <input type="file" name="myfile" (change)="importProductsFromExcel($event)" />
+            <!-- <button class="white-custom-btn">رفع ملف ايكسل <i class="far fa-file-excel"></i></button> -->رفع ملف
+            ايكسل
+            <input type="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" name="myfile"
+              (change)="importProductsFromExcel($event)" />
           </div>
 
         </form>
