--- a/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -39,16 +39,16 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/product-catalog" routerLinkActive="active">المنتجات</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link" routerLink="/offers" routerLinkActive="active">العروض</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link" routerLink="/customers" routerLinkActive="active">العملاء</a>
       </li>
       <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link" routerLink="/distributors" routerLinkActive="active">الموزعين</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link" routerLink="/cities" routerLinkActive="active">المدن</a>
       </li>
     </ul>
