--- a/WebUI/ClientApp/src/app/pages/product-catalog/product-categoies/product-categoies.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/product-categoies/product-categoies.component.html
@@ -19,6 +19,7 @@
 
     <div class="col-12">
         <div class="card">
+            <span class="p-3">العدد الكلي {{productCategorysTotalCount}}</span>
             <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
                 <div class="table-responsive" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
                     (scrolled)="onScroll()" [scrollWindow]="false">
