--- a/WebUI/ClientApp/src/app/pages/customers-managment/customers/customers.component.html
+++ b/WebUI/ClientApp/src/app/pages/customers-managment/customers/customers.component.html
@@ -26,6 +26,7 @@
     </div>
     <div class="col-12">
         <div class="card">
+            <span class="p-3">العدد الكلي {{customersTotalCount}}</span>
             <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
                 <div class="table-responsive" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
                     (scrolled)="onScroll()" [scrollWindow]="false">
