--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.html
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offers.component.html
@@ -17,6 +17,7 @@
     </div>
     <div class="col-12">
         <div class="card">
+            <span class="p-3">العدد الكلي {{offersTotalCount}}</span>
             <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
                 <div class="table-responsive" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
                     (scrolled)="onScroll()" [scrollWindow]="false" cdkDropList class="example-list"
